frontend/src/css/ChessBoard.css
.board {
  display: inline-block;
  max-width: 900px;
  border: 2px solid #634832;
}

.board-row {
  display: flex;
}

.board .square {
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: var(--piece-diameter);
  max-height: var(--piece-diameter);
  user-select: none;
  position: relative;
}

.board .square img {
  width: 100%;
  height: 100%;
}

.board .square .rank-file-label {
  position: absolute;
  font-size: 0.6rem;
  font-weight: 500;
  left: 2px;
  bottom: 1px;
}

@media (max-width: 450px) {
  .board .square .rank-file-label {
    font-size: 0.5rem;
  }
}

@media (max-width: 400px) {
  .board .square .rank-file-label {
    font-size: 0.45rem;
    left: 1px;
  }
}

@media (max-width: 375px) {
  .board .square .rank-file-label {
    font-size: 0.4rem;
  }
}

.board .square .rank-file-label--corner {
  left: 1px;
  bottom: 0;
}

.hidden-piece {
  visibility: hidden;
}

.piece {
  touch-action: none;
}

.piece.dragging {
  visibility: hidden;
}

.square--previous-move-light-square {
  background: #f5f580 !important;
}

.square--previous-move-dark-square {
  background: #b9ca42 !important;
}

.square--selected {
  background: yellow !important;
}

.floating-piece {
  background: rgba(255, 208, 0, 0.627) !important;
}

.floating-piece {
  border-radius: 25%;
  box-shadow: 0 0 10px 5px rgba(255, 255, 0, 0.8);
}

@media (min-width: 600px) {
  .floating-piece {
    background: unset !important;
    border-radius: unset;
    box-shadow: unset;
  }
}

.board .board-row .square {
  background-color: #779556;
}

.rank-count-odd .board-row:nth-child(odd) .square:nth-child(even),
.rank-count-odd .board-row:nth-child(even) .square:nth-child(odd) {
  background-color: #ebecd0;
}

.rank-count-even .board-row:nth-child(odd) .square:nth-child(odd),
.rank-count-even .board-row:nth-child(even) .square:nth-child(even) {
  background-color: #ebecd0;
}

